# agentic-ai-lab

./: pyproject.toml  requirements.txt
Notebooks/: 01_BuildingSimpleFlow.ipynb  02_AddingBrainInLangGraph.ipynb  03_ChainsInLangGraph.ipynb  04_BuildingChatbotwithMultipleTools.ipynb  05_ReACT_Agent.ipynb
